[package]
authors = ["smartinez <smartinez@nuclearis.com>"]
edition = "2018"
name = "nuclearis"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
serde = {features = ['derive'], optional = true, version = '1.0.101'}
sp-std = {default-features = false, version = '2.0.0'}
